# voice-dialing

./: .gitignore  README.md  README.ru.md  config.example.yaml  download_model.py  install.bat  install.sh  main.py  pyproject.toml  run_app.bat  run_app.sh  run_settings.bat  run_settings.sh  run_silent.vbs  settings_gui.py  test_typing.py
voice_typing/: __init__.py  audio_capture.py  config.py  corrector.py  hotkey.py  main.py  overlay.py  typer.py
voice_typing/recognizers/: __init__.py  base.py  vosk_engine.py  whisper_engine.py
